--- a/RinhaApi/RinhaApi.csproj
+++ b/RinhaApi/RinhaApi.csproj
@@ -9,11 +9,15 @@
         <GarbageCollectionAdaptationMode>1</GarbageCollectionAdaptationMode>
         <ServerGarbageCollection>true</ServerGarbageCollection>
         <TieredPGO>true</TieredPGO>
+        <InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);Dapper.AOT</InterceptorsPreviewNamespaces>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Akka.Cluster.Hosting" Version="1.5.15" />
       <PackageReference Include="Akka.Cluster.Sharding" Version="1.5.16" />
+      <PackageReference Include="Akka.Persistence.PostgreSql.Hosting" Version="1.5.15.1" />
+      <PackageReference Include="Dapper" Version="2.1.28" />
+      <PackageReference Include="Dapper.AOT" Version="1.0.31" />
     </ItemGroup>
 
 </Project>
