--- a/RinhaApi/appsettings.Development.json
+++ b/RinhaApi/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Error",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Db": "Host=localhost;Port=5432;Database=rinha;Username=rinha;Password=rinha;Pooling=true;Minimum Pool Size=50;Maximum Pool Size=2000;Multiplexing=true;Timeout=15;Command Timeout=15;Cancellation Timeout=-1;No Reset On Close=true;Max Auto Prepare=20;Auto Prepare Min Usages=1"
+  },
+  "Cluster": {
+    
   }
 }
