--- a/RinhaApi/appsettings.Development.json
+++ b/RinhaApi/appsettings.Development.json
@@ -8,6 +8,10 @@
     "Db": "Host=localhost;Port=5432;Database=rinha;Username=rinha;Password=rinha;Pooling=true;Minimum Pool Size=50;Maximum Pool Size=2000;Multiplexing=true;Timeout=15;Command Timeout=15;Cancellation Timeout=-1;No Reset On Close=true;Max Auto Prepare=20;Auto Prepare Min Usages=1"
   },
   "Cluster": {
-    
+    "Ip": "localhost",
+    "Port": 5213,
+    "Seeds" : [
+      "akka.tcp://Rinha@localhost:5213"
+    ]
   }
 }
